add find_package guard so linking different projects wouldn't cause conflict within stm32-cmake scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,8 +27,11 @@ set(CMSIS_COMP_LIST "")
 list(APPEND CMSIS_COMP_LIST STM32F4)
 list(APPEND HAL_COMP_LIST STM32F4)
 
-find_package(CMSIS COMPONENTS "${CMSIS_COMP_LIST}" REQUIRED)
-find_package(HAL COMPONENTS "${HAL_COMP_LIST}" REQUIRED)
+if(NOT STM32_CMAKE_PACKAGES)
+    find_package(CMSIS COMPONENTS "${CMSIS_COMP_LIST}" REQUIRED)
+    find_package(HAL COMPONENTS "${HAL_COMP_LIST}" REQUIRED)
+    set(STM32_CMAKE_PACKAGES 1)
+endif()
 
 add_executable(stm32-base ${SOURCES} ${HEADERS})
 target_link_libraries(stm32-base
