--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ if(NOT MCU_FAMILY)
 endif()
 
 #set(HAL_COMP_LIST RCC GPIO CORTEX)
-list(APPEND HAL_COMP_LIST STM32F4)
+list(APPEND HAL_COMP_LIST "STM32${MCU_FAMILY}")
 list(APPEND CMSIS_COMP_LIST "STM32${MCU_FAMILY}")
 
 if(NOT STM32_CMAKE_PACKAGES)
